--- a/demo/app/app.css
+++ b/demo/app/app.css
@@ -6,11 +6,15 @@ selectors and properties you can use to style UI components.
 
 /*
 In many cases you may want to use the NativeScript core theme instead
-of writing your own CSS rules. For a full list of class names in the theme
-refer to http://docs.nativescript.org/ui/theme. 
+of writing your own CSS rules. You can learn more about the
+NativeScript core theme at https://github.com/nativescript/theme
 The imported CSS rules must precede all other types of rules.
 */
-@import '~nativescript-theme-core/css/core.light.css';
+@import "~@nativescript/theme/css/core.css";
+@import "~@nativescript/theme/css/default.css";
+
+/* Place any CSS rules you want to apply on both iOS and Android here.
+This is where the vast majority of your CSS code goes. */
 
 .title {
     font-size: 30;
@@ -18,8 +22,10 @@ The imported CSS rules must precede all other types of rules.
     margin: 20;
 }
 
-button {
-    font-size: 42;
+Button {
+    padding-left: 10;
+    padding-right: 10;
+    font-size: 20;
     horizontal-align: center;
 }
 
@@ -28,4 +34,3 @@ button {
     color: #284848;
     horizontal-align: center;
 }
-
