--- a/demo/app/app.css
+++ b/demo/app/app.css
@@ -10,11 +10,13 @@ of writing your own CSS rules. You can learn more about the
 NativeScript core theme at https://github.com/nativescript/theme
 The imported CSS rules must precede all other types of rules.
 */
-@import "~@nativescript/theme/css/core.css";
-@import "~@nativescript/theme/css/default.css";
 
 /* Place any CSS rules you want to apply on both iOS and Android here.
 This is where the vast majority of your CSS code goes. */
+Page {
+    background-color: lightblue;
+    color: black;
+}
 
 .title {
     font-size: 30;
@@ -27,6 +29,12 @@ Button {
     padding-right: 10;
     font-size: 20;
     horizontal-align: center;
+    color: black;
+}
+
+.ns-ios Button {
+    margin: 20;
+    padding: 20;
 }
 
 .message {
